@@ -1,3 +1,9 @@
+2007-11-10 22:32 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/viewer3d/OEMMBehavior.java
+	  src/org/jcae/viewer3d/OEMMViewer.java: AbstractTriangle class
+	has been replaced by Triangle in jCAE.
+
 2007-10-24 10:01 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/viewer3d: Add Java generics and annotations.
